...
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_swipe_to_update"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_arrow_down" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp" />
...
